@@ -13,7 +13,12 @@ import sockets, strutils, parseutils, times, os, asyncio
 from asyncnet import nil
 from rawsockets import nil
 from asyncdispatch import PFuture
-
+## **Note**: This module is deprecated since version 0.11.3.
+## You should use the async version of this module
+## `asyncftpclient <asyncftpclient.html>`_.
+##
+## ----
+##
 ## This module **partially** implements an FTP client as specified
 ## by `RFC 959 <http://tools.ietf.org/html/rfc959>`_.
 ##
@@ -35,6 +40,8 @@ from asyncdispatch import PFuture
 ##
 ## **Warning:** The API of this module is unstable, and therefore is subject
 ## to change.
+
+{.deprecated.}
 
 type
   FtpBase*[SockType] = ref FtpBaseObj[SockType]
